[project]
name = "your-project-name"
version = "0.1.0"
dependencies = [
    "cellpose=4.1.1",
    "torch",
    "torchvision",
    "torchaudio",
    "napari[all]>=0.7.0",
    "nd2reader>=3.3.1",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.6",
]
requires-python = ">=3.11"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true  # Prevents uv from using this index unless explicitly told to

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
